--- a/style.css
+++ b/style.css
@@ -3,3 +3,39 @@
     font-family: 'Big Shoulders Display', cursive;
     font-family: 'Outfit', sans-serif;
 }
+
+body {
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+header {
+    display: grid;
+    grid-template-areas: 'image'
+        'words';
+    grid-template-rows: 250px 250px;
+    grid-template-columns: 1fr;
+
+}
+
+#img-holder {
+    background-image: url('imgs/mobile/image-hero@2x.jpg');
+    grid-area: image;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
+
+#top-words-button {
+    display: flex;
+    flex-direction: column;
+    padding: 1em;
+
+}
+
+h1 {
+    font-size: 60px;
+    font-weight: bold;
+    font-family: 'Big Shoulders Display', cursive;
+}
