--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ p {
 
 }
 
-#arrow-Holder {
+#arrow_Holder {
     background-color: #D5966C;
     padding: 1.4em;
 
@@ -86,6 +86,7 @@ p {
     display: flex;
     flex-direction: row;
     text-decoration: none;
+    cursor: pointer;
 }
 
 .word-mover {
