--- a/style.css
+++ b/style.css
@@ -270,6 +270,9 @@ footer p {
     width: 100%;
     background-color: #151515;
     padding: 2em;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
 #map-end {
@@ -279,6 +282,13 @@ footer p {
     margin-top: 0em;
     padding: 2em;
     color: #151515;
+
+}
+
+#location-items {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -471,6 +481,19 @@ footer p {
     }
 
 
+    .location-items {
+        display: flex;
+        flex-direction: row;
+        width: 689px;
+        max-width: 689px;
+        justify-content: space-between;
+        margin: 4em 0em;
+    }
+
+    #location-h1 {
+        margin-right: 3em;
+    }
+
 
 
 
@@ -524,6 +547,19 @@ footer p {
         width: 790px;
         max-width: 790px;
     }
+
+
+    .location-items {
+
+        width: 790px;
+        max-width: 790px;
+
+    }
+
+    #location-h1 {
+        margin-right: 4em;
+    }
+
 
 
 
@@ -705,6 +741,27 @@ footer p {
 
     .socials {
         left: 0em;
+    }
+
+
+    .location-items {
+
+        width: 1120px;
+        max-width: 1120px;
+
+    }
+
+    #location-h1 {
+        margin-right: 5em;
+    }
+
+
+    #location-h1 {
+        font-size: 70px;
+    }
+
+    #map-end {
+        padding: 4em;
     }
 
 
